--- a/src/renderer/worker.html
+++ b/src/renderer/worker.html
@@ -6,11 +6,54 @@
     <title>DashArchive AI Worker</title>
     <!-- Content Security Policy to allow Web-LLM (WASM, Connect) -->
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self' 'unsafe-eval'; connect-src 'self' https: data:; worker-src 'self' blob:;" />
+        content="default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https: data:; worker-src 'self' blob:;" />
 </head>
 
-<body>
+<body style="background-color: #ffcccc; border: 5px solid red;">
+    <h1 style="color: red; font-size: 24px;">I AM WORKER</h1>
     <div id="root"></div>
+    <script>
+        console.log('[Worker HTML] Init. checking window.api...');
+        try {
+            if (!window.api || !window.api.aiWorker) {
+                console.warn('[Worker HTML] window.api MISSING. Attempting Polyfill via nodeIntegration...');
+                const { ipcRenderer } = require('electron');
+                window.api = window.api || {};
+                window.api.aiWorker = {
+                    sendProgress: (data) => ipcRenderer.send('ai:progress', data),
+                    sendReady: () => ipcRenderer.send('ai:ready'),
+                    sendError: (msg) => ipcRenderer.send('ai:error', msg),
+                    sendResponse: (data) => ipcRenderer.send('ai:response', data),
+                    onAsk: (callback) => {
+                        ipcRenderer.on('ai:ask', (_, payload) => callback(payload))
+                    }
+                };
+                console.log('[Worker HTML] Polyfill SUCCESS ✅');
+                document.body.innerHTML += "<h2 style='color:orange'>API POLYFILLED</h2>";
+            } else {
+                console.log('[Worker HTML] window.api.aiWorker is AVAILABLE ✅');
+                document.body.innerHTML += "<h2 style='color:green'>API OK</h2>";
+            }
+        } catch (e) {
+            console.error('[Worker HTML] Polyfill FAILED:', e);
+            document.body.innerHTML += `<h2 style='color:red'>POLYFILL FAILED: ${e.message}</h2>`;
+        }
+
+        // CRITICAL: Hide Node.js environment from Web-LLM
+        // Web-LLM sees 'module' or 'process' and assumes Node.js, failing with createRequire.
+        // We delete them from global scope after we are done using require().
+        console.log('[Worker HTML] Sanitizing environment for Web-LLM...');
+        try {
+            if (window.module) delete window.module;
+            if (window.exports) delete window.exports;
+            if (window.require) delete window.require;
+            if (window.process) delete window.process; // Aggressive
+        } catch (e) {
+            console.warn('Sanitization error:', e);
+        }
+    </script>
+    <div id="ai-status" style="font-weight:bold; color:blue; font-size: 20px; background: white; padding: 10px;">AI
+        Script: Waiting for execution...</div>
     <script type="module" src="/src/worker/ai.ts"></script>
 </body>
 
